--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ psycopg2 = {version="^2.8.0", optional=true}
 click_completion = "^0.5.1"
 seaborn = {version = "^0.9.0",optional = true}
 jupyter = {version = "^1.0",optional = true}
+xarray = "^0.12.3"
 
 [tool.poetry.extras]
 fireworks = ["fireworks", "python-gssapi", "pymongo", "fabric", "paramiko"]
