--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,15 +12,11 @@ before_script:
 basic_tests:
   script:
     - cd $CI_PROJECT_DIR/tests
-    - pytest test_sobol.py
-    - cd commensurate_qpoints; python test_lattice_points.py
-    - cd ../hashes; python hashes.py
-    - cd ../cli; bash test_cli.sh
-    - cd ../anharmonicity_score; python test_r2.py
+    - pytest --ignore fireworks
+    - cd cli; bash test_cli.sh
     - cd ../phonopy; python run_phonopy.py
     - cd ../md; python run_md.py
     - cd ../harmonic_analysis; python mode_projection.py
-    - cd ../trajectory; python test_son.py
     - cd $CI_PROJECT_DIR/examples/devel
     - python material_fingerprints/material_fingerprints.py
 
