--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ python = "^3.6, <4.0"
 numpy = "^1.16"
 scipy = "~1.2.1"
 matplotlib = "^3.1"
-son = "^0.3.1"
+son = "^0.3.2"
 spglib = "^1.12"
 phonopy = "^2.1"
 ase = {git = "https://gitlab.com/ase/ase.git"}
@@ -31,7 +31,7 @@ pymongo = {version = "^3.8",optional = true}
 fabric = {version = "^2.4",optional = true}
 paramiko = {version = "^2.4",optional = true}
 psycopg2 = {version="^2.8.0", optional=true}
-click_completion = "^0.5.1"
+click_completion = {git = "https://github.com/flokno/click-completion.git", branch="fish_complete_files"}
 seaborn = {version = "^0.9.0",optional = true}
 jupyter = {version = "^1.0",optional = true}
 xarray = "^0.12.3"
