md workflow | wrap `get_forces` and `md.run(1)` to fish for `OSError` (Cobra issues..)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,3 +55,8 @@ hilde = 'hilde.cli:cli'
 [build-system]
 requires = ["poetry>=0.12", "numpy"]
 build-backend = "poetry.masonry.api"
+
+[tool.black]
+target-version = ['py37']
+
+
