--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ matplotlib = "^3.1"
 son = "^0.3.2"
 spglib = "^1.12"
 phonopy = "^2.1"
-ase = {git = "https://gitlab.com/ase/ase.git"}
+ase = "^3.18.0"
 click = "^7.0"
 attrs = "^19.1"
 pandas = "^0.24.2"
@@ -52,11 +52,11 @@ rope = "^0.14.0"
 [tool.poetry.scripts]
 hilde = 'hilde.cli:cli'
 
-[build-system]
-requires = ["poetry>=0.12", "numpy"]
-build-backend = "poetry.masonry.api"
-
 [tool.black]
 target-version = ['py37']
 
+
+[build-system]
+requires = ["poetry>=0.12", "numpy"]
+build-backend = "poetry.masonry.api"
 
