--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,11 +35,15 @@ click_completion = "^0.5.1"
 seaborn = {version = "^0.9.0",optional = true}
 jupyter = {version = "^1.0",optional = true}
 
+balsam-flow = {version = "^0.3.5", optional = true}
+setuptools = {version = "^39.2", optional = true}
+
 [tool.poetry.extras]
 fireworks = ["fireworks", "python-gssapi", "pymongo", "fabric", "paramiko"]
 phono3py = ["phono3py"]
 postgresql = ["psycopg2"]
 tutorial = ["seaborn", "jupyter"]
+balsam = ["balsam-flow", "setuptools"]
 
 [tool.poetry.dev-dependencies]
 black = "^18.9b0"
