--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ seaborn = {version = "^0.9.0",optional = true}
 jupyter = {version = "^1.0",optional = true}
 xarray = "^0.12.3"
 netCDF4 = "^1.5"
+jinja2 = "^2.10"
 
 [tool.poetry.extras]
 fireworks = ["fireworks", "python-gssapi", "pymongo", "fabric", "paramiko"]
