--- a/hilde/templates/config_files/slurm.in
+++ b/hilde/templates/config_files/slurm.in
@@ -2,7 +2,7 @@
 name:         test
 mail_type:    all
 mail_address: ${common:email}
-n_nodes:      1
-n_cores:      32
+nodes:      1
+cores:      32
 queue:        express
 timeout:      30
