--- a/examples/fireworks/workflow.in
+++ b/examples/fireworks/workflow.in
@@ -4,14 +4,14 @@ file = geometry.in
 #files = */geometry.in
 
 [general]
-workdir_cluster = "test_run/"
-workdir_local   = "test_run/"
+workdir_cluster = "/home/purcell/git/hilde_develop/examples/fireworks/test_run/"
+workdir_local   = "/home/purcell/git/hilde_develop/examples/fireworks/test_run/"
 use_third = False
 basisset = light
 use_tight_relax = False
-kgrid_dfunc_min = 1e4
-opt_kgrid = False
-relax_structure = False
+kgrid_dfunc_min = 1e-3
+opt_kgrid = True
+relax_structure = True
 
 [control]
 xc =                 pw-lda
@@ -21,7 +21,7 @@ output_level =       MD_light
 relativistic =       "atomic_zora scalar"
 
 [control_kpt]
-density = 1
+density = 1.0
 
 [phonopy]
 #supercell_matrix = [-1, 1, 1, 1, -1, 1, 1, 1, -1]
@@ -31,6 +31,7 @@ walltime = 3500
 serial = True
 displacement = 0.01
 converge_phonons = True
+get_gruniesen = True
 
 [phonopy_qadapter]
 walltime = 1:00:00
