--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ jupyter = {version = "^1.0",optional = true}
 xarray = "^0.12.3"
 netCDF4 = "^1.5"
 jinja2 = "^2.10"
+tables = "^3.5"
 
 [tool.poetry.extras]
 fireworks = ["fireworks", "python-gssapi", "pymongo", "fabric", "paramiko"]
