--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,12 +37,13 @@ jupyter = {version = "^1.0",optional = true}
 xarray = "^0.12.3"
 netCDF4 = "^1.5"
 jinja2 = "^2.10"
-hiphive = "^0.5.0"
+hiphive = {version = "^0.5.0", optional = true}
 tables = "^3.5"
 
 [tool.poetry.extras]
 fireworks = ["fireworks", "python-gssapi", "pymongo", "fabric", "paramiko"]
 phono3py = ["phono3py"]
+hiphive = ["hiphive"]
 postgresql = ["psycopg2"]
 tutorial = ["seaborn", "jupyter"]
 
