--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ netCDF4 = "^1.5"
 jinja2 = "^2.10"
 hiphive = {version = "^0.5.0", optional = true}
 tables = "^3.5"
+click_aliases = "^1.0"
 
 [tool.poetry.extras]
 fireworks = ["fireworks", "python-gssapi", "pymongo", "fabric", "paramiko"]
