--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ build = "build.py"
 [tool.poetry.dependencies]
 python = "^3.6, <4.0"
 numpy = "^1.16"
-scipy = "~1.2.1"
+scipy = "^1.2.1"
 matplotlib = "^3.1"
 son = "^0.3.2"
 spglib = "^1.12"
@@ -34,7 +34,7 @@ psycopg2 = {version="^2.8.0", optional=true}
 click_completion = {git = "https://github.com/flokno/click-completion.git", branch="fish_complete_files"}
 seaborn = {version = "^0.9.0",optional = true}
 jupyter = {version = "^1.0",optional = true}
-xarray = "^0.12.3"
+xarray = "^0.12"
 netCDF4 = "^1.5"
 jinja2 = "^2.10"
 hiphive = {version = "^0.5.0", optional = true}
