--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ matplotlib = "^3.1"
 son = "^0.3.2"
 spglib = "^1.12"
 phonopy = "^2.1"
-ase = "^3.18.0"
+ase = {git = "https://gitlab.com/ase/ase.git", branch="master"}
 click = "^7.0"
 attrs = "^19.1"
 pandas = "^0.25.0"
