flake8 | fix flake8 errors

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,11 +4,11 @@ before_script:
   - cp hilde/templates/config_files/hilderc.template ~/.hilderc
   - poetry update
   - poetry install
+  - flake8 hilde
   - cd $CI_PROJECT_DIR/tests
 
 default:
   script:
-    - flake8 hilde -v
     - pytest --ignore fireworks
     - cd cli; bash test_cli.sh
     - cd ../phonopy; python run_phonopy.py
