--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,9 @@ hilde = 'hilde.cli:cli'
 [tool.black]
 target-version = ['py37']
 
+[tool.dephell.main]
+from = {format = "poetry", path = "pyproject.toml"}
+to = {format = "setuppy", path = "setup.py"}
 
 [build-system]
 requires = ["poetry>=0.12", "numpy"]
