--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ black = "^18.9b0"
 pytest = "^4.6"
 flake8 = "^3.7"
 rope = "^0.14.0"
+flake8-bugbear = "^19.8"
 
 [tool.poetry.scripts]
 vibes = 'vibes.cli:cli'
