--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ before_script:
   - cp vibes/templates/config_files/vibesrc.template ~/.vibesrc
   - poetry install
   - flake8 vibes
+  - flake8 tests
   - cd $CI_PROJECT_DIR/tests
 
 default:
