--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,4 @@
 [flake8]
+max-complexity = 18
 ignore = D203, E501, E203, E731, W503, F401, E402, E741, F403, B006
 exclude = tests/*,examples/*,**/directions.py
