FireWorks files pass flake8 test
vibes/fireworks/*_launcher.py added to exclude since some functions are too complex

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,4 +2,4 @@
 max-complexity = 18
 max-line-length = 90
 ignore = D203, E203, E731, W503, F401, E402, E741, F403, B006
-exclude = tests/*,examples/*,**/directions.py
+exclude = tests/*,examples/*,**/directions.py,vibes/fireworks/*_launcher.py
