SocketIO calculators can now work with Unix Sockets
This is done for cases where TCP/IP connections are restricted

--- a/examples/phonopy.in
+++ b/examples/phonopy.in
@@ -12,6 +12,8 @@ default:                       light
 
 [socketio]
 port:                          12345
+# Uncomment if you want to use a unix socket
+# unixsocket:                    vibes_test_socket
 
 [phonopy]
 supercell_matrix:              [1, 2, 1]
