--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,21 +5,14 @@ before_script:
   - poetry install
   - flake8 vibes
   - flake8 tests
-  - cd $CI_PROJECT_DIR/tests
 
 default:
   script:
-    - pytest --ignore fireworks
-    - cd cli; bash test_cli.sh
-    - cd ../phonopy; python run_phonopy.py
-    - cd ../harmonic_analysis; python mode_projection.py
-    - cd ../trajectory; python test_to_db.py
-    - cd $CI_PROJECT_DIR/examples/devel
-    - python material_fingerprints/material_fingerprints.py
+    - pytest --cov --cov-config=setup.cfg tests/ --ignore tests/fireworks/
 
 fireworks:
   when: manual
   script:
     - service mongodb start --ipv6
     - pip install fireworks
-    - pytest fireworks
+    - pytest tests/fireworks
