--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,9 @@ flake8 = "^3.7"
 rope = "^0.14.0"
 flake8-bugbear = "^19.8"
 flake8-comprehensions = "^3.1"
+pytest-xdist = "^1.31"
+pytest-cov = "^2.8"
+isort = "^4.3"
 
 [tool.poetry.scripts]
 vibes = 'vibes.cli:cli'
