--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,15 @@ max-complexity = 18
 max-line-length = 90
 ignore = D203, E203, E731, W503, F401, E402, E741, F403, B006
 exclude = tests/*,examples/*,**/directions.py,vibes/fireworks/*_launcher.py,vibes/phonon_db/phonon_jsondb.py,vibes/phonon_db/phonon_sqlitedb.py
+
+[isort]
+line_length=90
+multi_line_output=3
+include_trailing_comma=True
+
+# codecov
+[run]
+include = vibes/*
+omit =
+    vibes/fireworks/*
+    
