tests | add `coverage` to `make test`

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,8 +1,11 @@
-test: test_basic clean
+test: test_coverage clean
 
 test_basic:
 	pytest --ignore fireworks
-	
+
+test_coverage:
+	pytest --cov --cov-config=../setup.cfg --ignore fireworks
+
 test_all:
 	pytest
 
