--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [flake8]
 max-complexity = 18
 max-line-length = 90
-ignore = D203, E203, E731, W503, F401, E402, E741, F403, B006
+ignore = D203,E203,E731,W503,E741,B006
 exclude = tests/*,examples/*,**/directions.py,vibes/fireworks/*_launcher.py,vibes/phonon_db/phonon_jsondb.py,vibes/phonon_db/phonon_sqlitedb.py
 
 [isort]
