--- a/setup.cfg
+++ b/setup.cfg
@@ -15,8 +15,8 @@ lines_after_imports=2
 # codecov
 [run]
 include = */vibes/*
-omit =
-    vibes/fireworks/*
+#omit =
+#    vibes/fireworks/*
     
 [tool:pytest]
 filterwarnings = ignore
