--- a/vibes/templates/config_files/fireworksrc.template
+++ b/vibes/templates/config_files/fireworksrc.template
@@ -16,4 +16,4 @@ njobs_block = 500
 [launch_params]
 nlaunches = 0
 sleep_time = 60
-tasks2queue = ["vibes.relaxation.bfgs.relax""vibes.fireworks.tasks.calculate_wrapper.wrap_calc_socket", "vibes.k_grid.converge_kgrid.converge_kgrid", "vibes.fireworks.tasks.calculate_wrapper.wrap_calculate" ]
+tasks2queue = ["vibes.relaxation.bfgs.relax", "vibes.fireworks.tasks.calculate_wrapper.wrap_calc_socket", "vibes.k_grid.converge_kgrid.converge_kgrid", "vibes.fireworks.tasks.calculate_wrapper.wrap_calculate", "vibes.fireworks.tasks.md.run" ]
