--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ isort = "^4.3"
 mkdocs = "^1.1"
 mkdocs-material = "^4.6"
 pymdown-extensions = "^6.3"
+mkdocs-minify-plugin = "^0.2.3"
 
 [tool.poetry.scripts]
 vibes = 'vibes.cli:cli'
