--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,8 @@ lines_after_imports=2
 include = */vibes/*
 omit =
     vibes/fireworks/*
+    docs/
+    paper/
     
 [tool:pytest]
 filterwarnings = ignore
