Adding a FireWorks Tutorial
Illustartes how to use the vibes fireworks packages

--- a/examples/high_throughput/workflow.in
+++ b/examples/high_throughput/workflow.in
@@ -1,7 +1,6 @@
 # information to build a default control.in
 [geometry]
-#file = geometry.in
-files = Si*/geometry.in
+files = */geometry.in
 
 [general]
 workdir_cluster = "test_run/"
