settings | add templates for building up settings files
* `settings.in`: add sections `[files]` and `[folders]` including `workdir`
* `aims.in`: default parameters for `aims` calculator
* `relaxation`: default parameters for `BFGS` relaxation

--- a/tests/workflows/md.in
+++ b/tests/workflows/md.in
@@ -18,10 +18,12 @@ timestep =    1
 temperature = 300
 friction =    0.02
 maxsteps =    2
-workdir =     md_test
 
 [restart]
 command = vibes run md
 
 [machine]
 basissetloc = species_defaults
+
+[folders]
+workdir =     md_test
