deps | `phono3py` not yet up to date with `phonopy 2.5.0`

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,8 @@ before_script:
   - flake8
   - cp vibes/templates/config_files/vibesrc.template ~/.vibesrc
   - poetry install
+  - pip install https://gitlab.com/ase/ase/-/archive/master/ase-master.tar.gz
+  - pip list
 
 default:
   script:
