--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,14 +18,14 @@ scipy = "^1.1.1"
 matplotlib = "^3.1"
 son = "^0.3.2"
 spglib = "^1.12"
-phonopy = "^2.1"
+phonopy = "^2.4, <2.5.0"
 ase = "^3.19.0"
 click = "^7.0"
 attrs = "^19.1"
 pandas = "^0.25.0"
 seekpath = "^1.8.4"
 fireworks = {version = "^1.9",optional = true}
-phono3py = {version = "^1.17",optional = true}
+phono3py = {version = "^1.18",optional = true}
 python-gssapi = {version = "^0.6.4",optional = true}
 pymongo = {version = "^3.8",optional = true}
 fabric = {version = "^2.4",optional = true}
@@ -46,7 +46,7 @@ hiphive = ["hiphive"]
 postgresql = ["psycopg2"]
 
 [tool.poetry.dev-dependencies]
-black = "^18.9b0"
+black = "^19.10b0"
 pytest = "^4.6"
 flake8 = "^3.7"
 rope = "^0.14.0"
