--- a/vibes/templates/config_files/fireworksrc.template
+++ b/vibes/templates/config_files/fireworksrc.template
@@ -1,19 +1,20 @@
-[remote_setup]
-launch_dir = "."
-remote_host = ["remote.host.path"]
-remote_config_dir = ["/path/to/remote/home/.fireworks/"]
-reserve = True
+[fireworks]
+config_dir: "~/.fireworks"
+tasks2queue = ["vibes.relaxation.bfgs.relax", "vibes.fireworks.tasks.calculate_wrapper.wrap_calc_socket", "vibes.k_grid.converge_kgrid.converge_kgrid", "vibes.fireworks.tasks.calculate_wrapper.wrap_calculate", "vibes.fireworks.tasks.md.run" ]
 
-[remote_host_auth]
-remote_user = remote_username
-remote_password = null
+[fireworks.remote]
+host = ["remote.host.path"]
+config_dir = ["/path/to/remote/home/.fireworks/"]
+launch_dir = "."
+
+[fireworks.remote.authorization]
+user = remote_username
+password = null
 gss_auth = True
 
-[remote_queue_param]
+[fireworks.remote.launch]
 njobs_queue = 0
 njobs_block = 500
-
-[launch_params]
+reserve = True
 nlaunches = 0
 sleep_time = 60
-tasks2queue = ["vibes.relaxation.bfgs.relax", "vibes.fireworks.tasks.calculate_wrapper.wrap_calc_socket", "vibes.k_grid.converge_kgrid.converge_kgrid", "vibes.fireworks.tasks.calculate_wrapper.wrap_calculate", "vibes.fireworks.tasks.md.run" ]
