--- a/vibes/templates/config_files/fireworksrc.template
+++ b/vibes/templates/config_files/fireworksrc.template
@@ -10,6 +10,7 @@ launch_dir = "."
 [fireworks.remote.authorization]
 user = remote_username
 password = null
+gss_auth = True
 
 [fireworks.remote.launch]
 njobs_queue = 0
