tutorial | update geometry optimization to new templates and settings

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,8 @@ markdown_extensions:
     - toc:
         permalink: "#"
     - pymdownx.arithmatex
+    - pymdownx.details
+    - pymdownx.superfences
     - footnotes
     - admonition
     
