ENH | Updated FireWorks test
Tests now include:
- cli tests for add_wf and rapid fire
- Gruneisen calculations when atomic relaxation is needed
- Single point calculations

--- a/tests/fireworks/workflow_C.in
+++ b/tests/fireworks/workflow_C.in
@@ -1,6 +1,6 @@
 # information to build a default control.in
-#[files]
-#geometry = geometry.in
+[files]
+geometry = geometry.in
 
 [calculator]
 name = EMT
@@ -9,7 +9,7 @@ name = EMT
 density = 1.00
 
 [calculator.socketio]
-port = null
+port = 31415
 
 [fireworks]
 name = example_run
@@ -28,14 +28,14 @@ scalar_pressure = 0.01
 hydrostatic_strain = True
 
 [phonopy]
-supercell_matrix = [-2, 2, 2, 2, -2, 2, 2, 2, -2]
+supercell_matrix = [2, 2, 0, -2, 2, 0, 0, 0, 1]
 conv_crit = 0.95
 serial = True
 displacement = 0.01
 
 [phonopy.convergence]
 minimum_similiarty_score = 0.05
-sc_matrix_base = [-1, 1, 1, 1, -1, 1, 1, 1, -1]
+sc_matrix_base = [2, 2, 0, -2, 2, 0, 0, 0, 1]
 
 [phonopy.qadapter]
 walltime = 1:00:00
@@ -48,11 +48,12 @@ volume_factors = [0.99, 1.01]
 serial = True
 temperatures = [300]
 debye_temp_fact = [1.0]
-supercell_matrix = [-1,1,1,1,-1,1,1,1,-1]
+supercell_matrix = [2, 2, 0, -2, 2, 0, 0, 0, 1]
 n_samples = 1
 deterministic = True
 
 [md]
+supercell_matrix = [2, 2, 0, -2, 2, 0, 0, 0, 1]
 driver =     Verlet
 timestep =   1
 maxsteps =   5
