docs | rename `FHI-vibes` tab to `Home` + fix

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,7 +20,7 @@ theme:
         code: 'Droid Sans Mono'
 
 nav:
-    - FHI-vibes: 
+    - Home:
         - Welcome!: README.md
         - References: References.md
         - License: license.md
