ci | automatically upload coverage report

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,8 @@ before_script:
 default:
   script:
     - pytest --cov --cov-config=setup.cfg tests/ --ignore tests/fireworks/
+  after_script:
+    - bash <(curl -s https://codecov.io/bash) -t d6fc44a4-f34d-4b5b-bf29-10db36125244
 
 fireworks:
   when: manual
