--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,18 +32,27 @@ nav:
         - Workflows:
             - "Relaxation": Documentation/relaxation.md
         - High-Throughut:
-            - Getting Started: High_Throughput/setup.md
-    - Tutorial: 
+                - Overview: High_Throughput/Documentation/0_overview.md
+                - Installation Guide: High_Throughput/Installation/0_setup.md
+                - General Workflows: High_Throughput/Documentation/1_general_high_throughput.md
+                - qadapters: High_Throughput/Documentation/2_qadapter.md
+                - K-Point Density Optimization: High_Throughput/Documentation/3_optimize_k_grid.md
+                - Relaxation: High_Throughput/Documentation/4_relaxation.md
+                - Phonon Calculations: High_Throughput/Documentation/5_phonons.md
+                - Monte Carlo Sampling: High_Throughput/Documentation/6_statistical_sampling.md
+                - Molecular Dynamics: High_Throughput/Documentation/7_md.md
+    - Tutorial:
         - Overview: Tutorial/0_intro.md
         - "Geometry Optimization": Tutorial/1_geometry_optimization.md
         - "Phonon Calculations":
             - "Background": Tutorial/2_phonopy_intro.md
             - "Running a phonon calculation": Tutorial/2_phonopy.md
         - High-Throughput:
-            - "Phonon Calculations": High_Throughput/0_tut.md
+            - "Phonon Calculations": High_Throughput/Tutorial/0_phonopy.md
+            - "Multistep Workflows": High_Throughput/Tutorial/1_multistep.md
         - Tutorial/acknowledgments.md
         - Tutorial/references.md
-        
+
 plugins:
   - search
   - minify:
@@ -58,11 +67,11 @@ markdown_extensions:
     - pymdownx.superfences
     - footnotes
     - admonition
-    
+
 extra_javascript:
   - 'javascripts/mathjax.js'
   - 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML'
-  
+
 
 extra:
   social:
@@ -70,4 +79,4 @@ extra:
       link: https://gitlab.com/flokno/hilde
     - type: twitter
       link: https://twitter.com/floknoo
-      
+
