--- a/tests/fireworks/geometry.in
+++ b/tests/fireworks/geometry.in
@@ -8,13 +8,13 @@ atom_frac    0.00000000000000    0.00000000000000    0.50000000000000  C
 atom_frac    0.33333333333333    0.66666666666667    0.07143000000000  C 
 atom_frac    0.66666666666667    0.33333333333333    0.57143000000000  C 
 # format: symmetry_n_params [n n_lv n_fracpos]
-symmetry_n_params 4 2 2
-symmetry_params a c z1 z2
-symmetry_lv (1.0/2.0)*a , -(sqrt(3.0)/2.0)*a , 0
-symmetry_lv (1.0/2.0)*a , (sqrt(3.0)/2.0)*a , 0
-symmetry_lv 0 , 0 , c
-symmetry_frac 0.0 , 0.0 , z1
-symmetry_frac 0.0 , 0.0 , ((1.0/2.0)+z1)
-symmetry_frac (1.0/3.0) , (2.0/3.0) , z2
-symmetry_frac (2.0/3.0) , (1.0/3.0) , ((1.0/2.0)+z2)
+#symmetry_n_params 4 2 2
+#symmetry_params a c z1 z2
+#symmetry_lv (1.0/2.0)*a , -(sqrt(3.0)/2.0)*a , 0
+#symmetry_lv (1.0/2.0)*a , (sqrt(3.0)/2.0)*a , 0
+#symmetry_lv 0 , 0 , c
+#symmetry_frac 0.0 , 0.0 , z1
+#symmetry_frac 0.0 , 0.0 , ((1.0/2.0)+z1)
+#symmetry_frac (1.0/3.0) , (2.0/3.0) , z2
+#symmetry_frac (2.0/3.0) , (1.0/3.0) , ((1.0/2.0)+z2)
 # AFLOW::AIMS END 
