--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,7 @@ nav:
         - "Calculator Setup": Documentation/calculator_setup.md
         - Workflows:
             - "Relaxation": Documentation/relaxation.md
+            - "Phonopy": Documentation/phonopy.md
         - High-Throughut:
                 - Overview: High_Throughput/Documentation/0_overview.md
                 - Installation Guide: High_Throughput/Installation/0_setup.md
