--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,6 +54,7 @@ nav:
         - "Molecular Dynamics":
             - "Background": Tutorial/3_md_intro.md
             - "Canonical Sampling": Tutorial/3_md_canonical_sampling.md
+            - Tutorial/3_md_postprocess.md
         - "Statistical Sampling": Tutorial/4_statistical_sampling.md
         - "Anharmonicity Quantification": Tutorial/5_anharmonicity_quantification.md
         - High-Throughput:
