--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -55,7 +55,7 @@ nav:
             - "Background": Tutorial/3_md_intro.md
             - "Canonical Sampling": Tutorial/3_md_canonical_sampling.md
             - Tutorial/3_md_postprocess.md
-        - "Statistical Sampling": Tutorial/4_statistical_sampling.md
+        - Tutorial/4_statistical_sampling.md
         - "Anharmonicity Quantification": Tutorial/5_anharmonicity_quantification.md
         - High-Throughput:
             - "Phonon Calculations": High_Throughput/Tutorial/0_phonopy.md
