docs | improve appreciation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,7 +22,8 @@ theme:
 nav:
     - Home:
         - Welcome!: README.md
-        - References: References.md
+        - Credits.md
+        - References.md
         - License: license.md
     - Tutorial:
         - Overview: Tutorial/0_intro.md
