--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ pymongo = {version = "^3.8",optional = true}
 fabric = {version = "^2.4",optional = true}
 paramiko = {version = "^2.4",optional = true}
 psycopg2 = {version="^2.8.0", optional=true}
-xarray = "^0.12"
+xarray = ">=0.13"
 netCDF4 = "^1.5"
 jinja2 = "^2.10"
 hiphive = {version = "^0.5.0", optional = true}
