--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,8 @@ theme:
 nav:
     - Home:
         - Welcome!: README.md
+        - Installation.md
+        - Credits.md
         - References.md
         - License: license.md
     - Tutorial:
