--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -92,5 +92,5 @@ extra:
     - type: gitlab
       link: https://gitlab.com/vibes-developers/vibes
     - type: twitter
-      link: https://twitter.com/floknoo
+      link: https://twitter.com/flokno_phys
 
